--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc;
-        -webkit-tap-highlight-color: transparent; /* Melhora feedback de toque no mobile */
+        -webkit-tap-highlight-color: transparent;
       }
-      /* Prevenção de overscroll no mobile para parecer mais nativo */
       body, html {
         overscroll-behavior-y: contain;
       }
@@ -32,14 +31,19 @@
   <script type="importmap">
 {
   "imports": {
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.91.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <!-- Ponto de entrada da aplicação -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
