feat: Enhance PWA for TrainMaster Pro
- Refine manifest.json with PWA-specific properties like `id`, `start_url`, `scope`, `display`, `theme_color`, `background_color`, and `orientation`.
- Add `apple-touch-icon` to `index.html` for better iOS integration.
- Explicitly set `scope: './'` in service worker registration in `index.tsx`.
- Add a smaller 192x192 icon to the manifest.
- Update `sw.js` to cache `index.tsx` and refine offline fallback logic.
- Ensure `root` element has `height: 100%` in `index.html`.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="TrainMaster" />
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='128' fill='%232563eb'/%3E%3Cpath d='M256 160l160 80-160 80-160-80 160-80z' fill='white'/%3E%3Cpath d='M256 320l120-60v80l-120 60-120-60v-80l120 60z' fill='white'/%3E%3C/svg%3E" />
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -26,6 +27,10 @@
       }
       body, html {
         overscroll-behavior-y: contain;
+        height: 100%;
+      }
+      #root {
+        height: 100%;
       }
     </style>
   <script type="importmap">
