--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>TrainMaster Pro</title>
     
     <!-- PWA Meta Tags -->
@@ -23,12 +23,15 @@
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc;
         -webkit-tap-highlight-color: transparent;
+        overflow: hidden;
       }
       body, html {
-        overscroll-behavior-y: contain;
+        overscroll-behavior-y: none;
         height: 100%;
         margin: 0;
         padding: 0;
+        position: fixed;
+        width: 100%;
       }
       #root {
         height: 100%;
