--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
         height: 100%;
         margin: 0;
         padding: 0;
-        background-color: #0f172a;
+        background-color: #f8fafc;
         font-family: 'Inter', sans-serif;
         overflow: hidden;
       }
       #root {
         height: 100%;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
       }
       
       .custom-scrollbar::-webkit-scrollbar {
